--- a/prod/docker-compose.yml
+++ b/prod/docker-compose.yml
@@ -14,10 +14,11 @@ services:
       - TZ=America/Sao_Paulo
       - JELLYFIN_PublishedServerUrl=jelly.alvitre.com.br #optional
     volumes:
-      - /net/dragon/mnt/RAID/iocage/files/sistemas/media_server/volumes//jellyfin/config:/config
+      - /net/dragon/mnt/RAID/iocage/files/sistemas/media_server/volumes/jellyfin/config:/config
       - /net/dragon/mnt/RAID/iocage/files/media/tv:/data/tvshows
       - /net/dragon/mnt/RAID/iocage/files/media/movies:/data/movies
       - /net/dragon/mnt/RAID/iocage/files/media/music:/data/music
+      - /net/dragon/mnt/RAID/iocage/files/media/animes:/data/animes
       # -  ../media/movies/opt/vc/lib:/opt/vc/lib #optional
     ports:
       - 8096:8096
@@ -31,3 +32,35 @@ services:
       - "traefik.enable=true"
       - traefik.http.routers.jelly.rule=Host(`jelly.alvitre.com.br`)
       - traefik.http.services.jelly.loadbalancer.server.port=8096
+
+  sickchill:
+    image: ghcr.io/linuxserver/sickchill
+    container_name: sickchill
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/London
+    volumes:
+      - /net/dragon/mnt/RAID/iocage/files/media/sick:/config
+      - /net/dragon/mnt/RAID/iocage/files/media/dowloads:/downloads
+      - /net/dragon/mnt/RAID/iocage/files/media/sick:/tv
+    ports:
+      - 8081:8081
+    restart: unless-stopped
+
+  qbittorrent:
+    image: ghcr.io/linuxserver/qbittorrent
+    container_name: qbittorrent
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Sao_Paulo
+      - WEBUI_PORT=8087
+    volumes:
+      - /net/dragon/mnt/RAID/iocage/files/sistemas/media_server/volumes/qbittorrent/config:/config
+      - /net/dragon/mnt/RAID/iocage/files/media/dowloads:/downloads
+    ports:
+      - 6881:6881
+      - 6881:6881/udp
+      - 8087:8087
+    restart: unless-stopped
