--- a/docker-compose.files.yml
+++ b/docker-compose.files.yml
@@ -5,28 +5,28 @@ networks:
     external: true
 
 services:
-  nextcloud:
-    image: ghcr.io/linuxserver/nextcloud
-    restart: always
-    user: 1000:1000
-    networks:
-      - stack_ponte
-    ports:
-      - 8444:80
-    volumes:
-      - ${NUVEM}:/data
-      - ${VOLUMES}/nextcloud/config:/config
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - MYSQL_PASSWORD=${PASS}
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=root
-      - MYSQL_HOST=mysql_${HOST}
-    labels:
-      - "traefik.enable=true"
-      - traefik.http.routers.nextcloud.rule=Host(`nextcloud.${DOMAIN}`)
-      - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
+  # nextcloud:
+  #   image: ghcr.io/linuxserver/nextcloud
+  #   restart: always
+  #   user: 1000:1000
+  #   networks:
+  #     - stack_ponte
+  #   ports:
+  #     - 8444:80
+  #   volumes:
+  #     - ${NUVEM}:/data
+  #     - ${VOLUMES}/nextcloud/config:/config
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #     - MYSQL_PASSWORD=${PASS}
+  #     - MYSQL_DATABASE=nextcloud
+  #     - MYSQL_USER=root
+  #     - MYSQL_HOST=mysql_${HOST}
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - traefik.http.routers.nextcloud.rule=Host(`nextcloud.${DOMAIN}`)
+  #     - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
 
   photoprism:
     image: photoprism/photoprism:latest
