--- a/docker-compose.lab.yml
+++ b/docker-compose.lab.yml
@@ -6,63 +6,65 @@ networks:
 
 services:
   homeassistant:
-    image: ghcr.io/linuxserver/homeassistant
     container_name: homeassistant
-    network_mode: host
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TZ}
+    image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
-      - ${VOLUMES}/homeassistant/config:/config
+      - ${VOLUMES}/newhomeassistant/config:/config
+      - /etc/localtime:/etc/localtime:ro
     ports:
       - 8123:8123 #optional
     restart: unless-stopped
+    privileged: true
+    networks:
+      - stack_ponte
+    labels:
+      - "traefik.enable=true"
+      - traefik.http.routers.home.rule=Host(`home.${DOMAIN}`)
+      - traefik.http.services.home.loadbalancer.server.port=8123
+      - "traefik.http.routers.home.tls.certresolver=le"
 
-  duplicati:
-    image: ghcr.io/linuxserver/duplicati
-    container_name: duplicati
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/London
-      - CLI_ARGS= #optional
-    volumes:
-      - ${VOLUMES}/duplicati/config>:/config
-      - /home/alvitre/Developer/Pessoal/media_server/backup:/backups
-      - /home/alvitre/Developer/Pessoal/media_server/Media:/source
-    ports:
-      - 8200:8200
+  nextcloud:
+    image: lscr.io/linuxserver/nextcloud
+    container_name: nextcloud
     restart: unless-stopped
-
-  heimdall:
-    image: ghcr.io/linuxserver/heimdall
-    container_name: heimdall
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TZ}
-    volumes:
-      - ${VOLUMES}/heimdall/config:/config
     networks:
       - stack_ponte
     ports:
-      - 980:80
+      - 8484:80
       - 9443:443
-    restart: unless-stopped
-
-  calibre-web:
-    image: ghcr.io/linuxserver/calibre-web
-    container_name: calibre-web
+    volumes:
+      - ${NUVEM}/newnextcloud:/data
+      - ${VOLUMES}/newnextcloud/config:/config
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=${TZ}
-      - DOCKER_MODS=linuxserver/calibre-web:calibre #optional
-      - OAUTHLIB_RELAX_TOKEN_SCOPE=1 #optional
-    volumes:
-      - ${VOLUMES}/calibre/config:/config
-      - ${MEDIA}/Books:/books
-    ports:
-      - 8083:8083
-    restart: unless-stopped
+      - MYSQL_PASSWORD=${DBPASS}
+      - MYSQL_DATABASE=newnextcloud
+      - MYSQL_USER=root
+      - MYSQL_HOST=${DATABASE}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.nextcloud.rule=Host(`nextcloud.${DOMAIN}`)
+      - traefik.http.services.nextcloud.loadbalancer.server.port=8484
+      - "traefik.http.routers.nextcloud.tls.certresolver=le"
+  # duplicati:
+  #   image: ghcr.io/linuxserver/duplicati
+  #   container_name: duplicati
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #     - TZ=Europe/London
+  #     - CLI_ARGS= #optional
+  #   volumes:
+  #     - ${VOLUMES}/duplicati/config>:/config
+  #     #- /home/alvitre/Developer/Pessoal/media_server/backup:/backups
+  #     #- /home/alvitre/Developer/Pessoal/media_server/Media:/source
+  #   ports:
+  #     - 8200:8200
+  #   restart: unless-stopped
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - traefik.http.routers.duplicati.rule=Host(`duplicati.${DOMAIN}`)
+  #     - traefik.http.services.duplicati.loadbalancer.server.port=8200
+  #     - "traefik.http.routers.duplicati.tls.certresolver=le"
