--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,10 @@ services:
       - stack_ponte
     ports:
       - 8029:80
-    user: 100:100
+    user: 1000:100
     volumes:
-      - ${NUVEM}/officialnextcloud:/var/www/html/data
-      - ${VOLUMES}/officialnextcloud:/var/www/html
+      - ${NUVEM}:/var/www/html/data
+      - ${VOLUMES}/nextcloud:/var/www/html
     environment:
       - MYSQL_PASSWORD=${DBPASS}
       - MYSQL_DATABASE=nextcloud
@@ -26,47 +26,76 @@ services:
       - traefik.enable=true
       - traefik.http.routers.nextcloud.rule=Host(`nextcloud.${DOMAIN}`)
       - traefik.http.services.nextcloud.loadbalancer.server.port=80
-
+      - "traefik.http.routers.nextcloud.tls.certresolver=le"
+      
   jellyfin:
-    image: jellyfin/jellyfin
-    container_name: jellyfin
-    user: 1000:1000
-    networks:
-      - stack_ponte
-    ports:
-      - 8097:8096
-    volumes:
-      - ${VOLUMES}/jellyfin/config:/config
-      - ${MEDIA}:/media
-    restart: "unless-stopped"
-    labels:
-      - "traefik.enable=true"
-      - traefik.http.routers.jelly.rule=Host(`jelly.${DOMAIN}`)
-      - traefik.http.services.jelly.loadbalancer.server.port=8096
-      - JELLYFIN_PublishedServerUrl=https://jelly.${DOMAIN}
-
+     image: jellyfin/jellyfin
+     container_name: jellyfin
+     user: 1000:100
+     networks:
+       - stack_ponte
+     ports:
+       - 8097:8096
+     volumes:
+       - ${VOLUMES}/jellyfin:/config
+       - ${ENTRETENIMENTO}:/media
+     restart: "unless-stopped"
+     labels:
+       - "traefik.enable=true"
+       - traefik.http.routers.jelly.rule=Host(`jelly.${DOMAIN}`)
+       - traefik.http.services.jelly.loadbalancer.server.port=8096
+       - JELLYFIN_PublishedServerUrl=https://jelly.${DOMAIN}
+       - "traefik.http.routers.jelly.tls.certresolver=le"
+       
   transmission:
-    image: lscr.io/linuxserver/transmission
-    container_name: transmission
+     image: linuxserver/transmission
+     container_name: transmission
+     networks:
+       - stack_ponte
+     environment:
+       - PUID=1000
+       - PGID=100
+       - TZ=${TZ}
+       - TRANSMISSION_WEB_HOME=/combustion-release/
+       - USER=${USER}
+       - PASS=${PW}
+     volumes:
+       - ${VOLUMES}/transmission:/config
+       - ${MEDIAS}/Downloads:/downloads
+     ports:
+       - 9092:9091
+       - 51414:51413
+       - 51414:51413/udp
+     restart: unless-stopped
+     labels:
+       - "traefik.enable=true"
+       - traefik.http.routers.qbt.rule=Host(`qbt.${DOMAIN}`)
+       - traefik.http.services.qbt.loadbalancer.server.port=9091
+       - "traefik.http.routers.qbt.tls.certresolver=le"
+
+  openhab:
+    image: "openhab/openhab"
+    restart: always
     networks:
       - stack_ponte
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TZ}
-      - TRANSMISSION_WEB_HOME=/combustion-release/ #optional
-      - USER=${USER} #optional
-      - PASS=${PW} #optional
+    container_name: openhab
     volumes:
-      - ${VOLUMES}/transmission/config:/config
-      - ${MEDIA}/Dowloads:/downloads
-      - ${MEDIA}/Watch:/watch
+      - "/etc/localtime:/etc/localtime:ro"
+      - "/etc/timezone:/etc/timezone:ro"
+      - "${VOLUMES}/openhab/openhab_addons:/openhab/addons"
+      - "${VOLUMES}/openhab/openhab_conf:/openhab/conf"
+      - "${VOLUMES}/openhab/openhab_userdata:/openhab/userdata"
     ports:
-      - 9092:9091
-      - 51414:51413
-      - 51414:51413/udp
-    restart: unless-stopped
+      - 8087:8080
+      - 8107:8101
+      - 5007:5007
+    environment:
+      CRYPTO_POLICY: "unlimited"
+      EXTRA_JAVA_OPTS: "-Duser.timezone=${TZ}"
+      USER_ID: "1000"
+      GROUP_ID: "100"
     labels:
       - "traefik.enable=true"
-      - traefik.http.routers.qbt.rule=Host(`qbt.${DOMAIN}`)
-      - traefik.http.services.qbt.loadbalancer.server.port=9091
+      - traefik.http.routers.home.rule=Host(`home.${DOMAIN}`)
+      - traefik.http.services.home.loadbalancer.server.port=8080
+      - "traefik.http.routers.home.tls.certresolver=le"
