--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.9"
 
 networks:
+  MYmacvlan:
+    external:
+      name: MYmacvlan
+      
   stack_ponte:
     external: true
 
@@ -99,3 +103,86 @@ services:
       - traefik.http.routers.home.rule=Host(`home.${DOMAIN}`)
       - traefik.http.services.home.loadbalancer.server.port=8080
       - "traefik.http.routers.home.tls.certresolver=le"
+      
+  trilium:
+    image: zadam/trilium
+    container_name: trilium
+    restart: always
+    networks:
+      - stack_ponte
+    volumes:
+      - ${VOLUMES}/trilium:/home/node/trilium-data
+    ports:
+      - 5801:8080
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.trilium.rule=Host(`trilium.${DOMAIN}`)
+      - traefik.http.services.trilium.loadbalancer.server.port=8080
+      - traefik.http.routers.trilium.tls.certresolver=le
+      
+      
+  pihole:
+    image: pihole/pihole:latest
+    container_name: pihole
+    cap_add:
+      - NET_ADMIN
+    restart: unless-stopped
+    networks:
+     - MYmacvlan
+    environment:
+      WEBPASSWORD: ${PW}
+    ports:
+      - "9753:53/tcp"
+      - "9753:53/udp"
+      - "9767:67/udp"
+      - "9780:80/tcp"
+    volumes:
+      - './etc-pihole:/etc/pihole'
+      - './etc-dnsmasq.d:/etc/dnsmasq.d'
+      
+  photoprism:
+    image: photoprism/photoprism:latest
+    container_name: photoprism
+    user: 1000:100
+    security_opt:
+      - seccomp:unconfined
+      - apparmor:unconfined
+    networks:
+      - stack_ponte
+    ports:
+      - "2342:2342"
+    environment:
+      PHOTOPRISM_ADMIN_USER: ${USER}                # superadmin username
+      PHOTOPRISM_ADMIN_PASSWORD: ${PW}         # initial superadmin password (minimum 8 characters)
+      PHOTOPRISM_AUTH_MODE: "password"               # authentication mode (public, password)
+      PHOTOPRISM_SITE_URL: "http://192.168.15.4:2342/"  # server URL in the format "http(s)://domain.name(:port)/(path)"
+      PHOTOPRISM_ORIGINALS_LIMIT: 5000               # file size limit for originals in MB (increase for high-res video)
+      PHOTOPRISM_HTTP_COMPRESSION: "gzip"            # improves transfer speed and bandwidth utilization (none or gzip)
+      PHOTOPRISM_LOG_LEVEL: "info"                   # log level: trace, debug, info, warning, error, fatal, or panic
+      PHOTOPRISM_READONLY: "false"                   # do not modify originals directory (reduced functionality)
+      PHOTOPRISM_EXPERIMENTAL: "false"               # enables experimental features
+      PHOTOPRISM_DISABLE_CHOWN: "false"              # disables updating storage permissions via chmod and chown on startup
+      PHOTOPRISM_DISABLE_WEBDAV: "false"             # disables built-in WebDAV server
+      PHOTOPRISM_DISABLE_SETTINGS: "false"           # disables settings UI and API
+      PHOTOPRISM_DISABLE_TENSORFLOW: "false"         # disables all features depending on TensorFlow
+      PHOTOPRISM_DISABLE_FACES: "false"              # disables face detection and recognition (requires TensorFlow)
+      PHOTOPRISM_DISABLE_CLASSIFICATION: "false"     # disables image classification (requires TensorFlow)
+      PHOTOPRISM_DISABLE_RAW: "false"                # disables indexing and conversion of RAW files
+      PHOTOPRISM_RAW_PRESETS: "false"                # enables applying user presets when converting RAW files (reduces performance)
+      PHOTOPRISM_JPEG_QUALITY: 85                    # a higher value increases the quality and file size of JPEG images and thumbnails (25-100)
+      PHOTOPRISM_DETECT_NSFW: "false"                # automatically flags photos as private that MAY be offensive (requires TensorFlow)
+      PHOTOPRISM_UPLOAD_NSFW: "true"                 # allows uploads that MAY be offensive (no effect without TensorFlow)
+      PHOTOPRISM_DATABASE_DRIVER: "mysql"            # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
+      PHOTOPRISM_DATABASE_SERVER: ${DATABASE}    # MariaDB or MySQL database server (hostname:port)
+      PHOTOPRISM_DATABASE_NAME: "photoprism"         # MariaDB or MySQL database schema name
+      PHOTOPRISM_DATABASE_USER: "root"         # MariaDB or MySQL database user name
+      PHOTOPRISM_DATABASE_PASSWORD: ${DBPASS}       # MariaDB or MySQL database user password
+      PHOTOPRISM_SITE_CAPTION: "AI-Powered Photos"
+      PHOTOPRISM_SITE_DESCRIPTION: ""                # meta site description
+      PHOTOPRISM_SITE_AUTHOR: ""                     # meta site author
+    working_dir: "/photoprism" # do not change or remove
+    volumes:
+      # "/host/folder:/photoprism/folder"                # Example
+      - "${FILES}/graph:/photoprism/originals"               # Original media files (DO NOT REMOVE)
+      - "${VOLUMES}/photoprism/storage:/photoprism/storage"                  # *Writable* storage folder for cache, database, and sidecar files (DO NOT REMOVE)
+
